--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
         "sass-loader": "^11.0.1",
         "vue": "^3.2.0",
         "vue-loader": "^16.8.3"
+    },
+    "dependencies": {
+        "@volar/language-server": "2.4.0-alpha.18",
+        "@vue/language-server": "2.0.28"
     }
 }
